crates/oxc_css_parser/tests/error/scss/variable/dollar-hyphen.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: CSS rule is expected
  ┌─ dollar-hyphen.scss:1:5
  │
1 │ a { $-: 1px }
  │     ^
